sqrt exercise